--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /database
 /WebContent/WEB-INF/spring/db-config.xml
 /WebContent/ext-4.2.1
+/WebContent/icons
 
 # Compiled source #
 ###################
