--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,9 +11,11 @@
 	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 	<init-param>
 		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:app-config.xml</param-value>
+		<!-- 
 		<param-value>
 			/WEB-INF/spring/app-config.xml
-		</param-value>
+		</param-value> -->
 	</init-param>
 	<load-on-startup>1</load-on-startup>
   </servlet>
